# ChangeLog for www-client/opera
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.225 2008/05/10 15:23:08 jer Exp $

*opera-9.50_beta2_p1962 (10 May 2008)

  10 May 2008; Jeroen Roovers <jer@gentoo.org>
  +opera-9.50_beta2_p1962.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2008/05/09/profile-guided-optimizations>.

*opera-9.50_beta2_p1951 (07 May 2008)

  07 May 2008; Jeroen Roovers <jer@gentoo.org> -opera-9.50_pre1951.ebuild,
  +opera-9.50_beta2_p1951.ebuild:
  Still a beta2 apparently.

*opera-9.50_pre1951 (07 May 2008)

  07 May 2008; Jeroen Roovers <jer@gentoo.org> +opera-9.50_pre1951.ebuild,
  -opera-9.50_beta2_pre1904.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2008/05/06/getting-ready-for-dragonfly>.

  26 Apr 2008; Jeroen Roovers <jer@gentoo.org> -opera-9.50_beta1.ebuild:
  Should have gone a long time ago (bug #219292, thanks to Jesús Pérez).

  24 Apr 2008; Jeroen Roovers <jer@gentoo.org>
  -opera-9.50_beta2_p1904.ebuild, -opera-9.50_beta2_p1929.ebuild:
  Really remove the _p* versions.

*opera-9.50_beta2_pre1929 (24 Apr 2008)
*opera-9.50_beta2_pre1904 (24 Apr 2008)

  24 Apr 2008; Jeroen Roovers <jer@gentoo.org>
  +opera-9.50_beta2_pre1904.ebuild, +opera-9.50_beta2_pre1929.ebuild:
  Fix the versioning scheme once again.

  24 Apr 2008; Jeroen Roovers <jer@gentoo.org> opera-9.50_beta2.ebuild:
  Add more updates from the latest 9.50_beta2_p*.

  24 Apr 2008; Jeroen Roovers <jer@gentoo.org> opera-9.50_beta2.ebuild:
  Fix CVS header. Add back x86-fbsd SRC_URI magic.

  24 Apr 2008; Jeroen Roovers <jer@gentoo.org> +opera-9.50_beta2.ebuild,
  -opera-9.50_beta2_p1766.ebuild, -opera-9.50_beta2_p1772.ebuild,
  -opera-9.50_beta2_p1786.ebuild, -opera-9.50_beta2_p1800.ebuild,
  -opera-9.50_beta2_p1823.ebuild, -opera-9.50_beta2_p1834.ebuild,
  -opera-9.50_beta2_p1875.ebuild, -opera-9.50_beta2_p1887.ebuild:
  Version bump