@@ -1,11 +1,18 @@
 # ChangeLog for www-client/opera
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.225 2008/05/10 15:23:08 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.226 2008/05/20 17:04:32 jer Exp $
+
+*opera-9.50_beta2_p1971 (20 May 2008)
+
+  20 May 2008; Jeroen Roovers <jer@gentoo.org> +opera-9.50_beta2_p1971.ebuild:
+  Version bump
+  <http://my.opera.com/desktopteam/blog/2008/05/20/stability-is-this-weeks-wor
+  d>. qt-static defaults to qt4 for now. Qt version support and LINGUAS
+  support to be added soon.
 
 *opera-9.50_beta2_p1962 (10 May 2008)
 
-  10 May 2008; Jeroen Roovers <jer@gentoo.org>
-  +opera-9.50_beta2_p1962.ebuild:
+  10 May 2008; Jeroen Roovers <jer@gentoo.org> +opera-9.50_beta2_p1962.ebuild:
   Version bump
   <http://my.opera.com/desktopteam/blog/2008/05/09/profile-guided-optimizations>.
 
